# PlyDisplay

./: CMakeLists.txt  vcpkg.json
scripts/: baseline.json  getport.py  readme.md  thirdparty.json
src/ReadPly/: CMakeLists.txt  main.cpp
